--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
+    <button id="btn">Today(Tuesday, July 12, 2022)</button>
+    <button>Wednesday(wednesday, July 13, 2022)</button>
+    <button>Thursday(thursday, July 14, 2022)</button>  
+    <button>Friday(Tuesday, July 15, 2022)</button>
+    <button>Saturday(Tuesday, July 16, 2022)</button>
+    <button>Sunday(Tuesday, July 17, 2022)</button>
+    <button>Monday(Tuesday, July 18, 2022)</button>
+    <!-- <script>
+        function today() {
+            console.log("lashuka")
+        }
+    </script> -->
     <script src="weather.js" type="module"></script>
 </body>
 </html>
