--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="amindi.css">
 </head>
 <body>
-    <button id="btn">Today(Tuesday, July 12, 2022)</button>
-    <button>Wednesday(wednesday, July 13, 2022)</button>
-    <button>Thursday(thursday, July 14, 2022)</button>  
-    <button>Friday(Tuesday, July 15, 2022)</button>
-    <button>Saturday(Tuesday, July 16, 2022)</button>
-    <button>Sunday(Tuesday, July 17, 2022)</button>
-    <button>Monday(Tuesday, July 18, 2022)</button>
+    <button id="btn"></button>
+    <button id="btn1"></button>
+    <button id="btn2"></button>  
+    <button id="btn3">X</button>
+    <button id="btn4">X</button>
+    <button id="btn5">X</button>
+    <button id="btn6">X</button>
+    <div id="divs" ></div>
     <!-- <script>
         function today() {
             console.log("lashuka")
