--- a/index.html
+++ b/index.html
@@ -8,19 +8,15 @@
     <link rel="stylesheet" href="amindi.css">
 </head>
 <body>
-    <button id="btn"></button>
-    <button id="btn1"></button>
-    <button id="btn2"></button>  
+    <button class="btn" onclick="ex1(event)" ></button>
+    <button class="btn1" onclick="ex1(event)" ></button>
+    <button class="btn2" onclick="ex1(event)"></button>  
     <button id="btn3">X</button>
     <button id="btn4">X</button>
     <button id="btn5">X</button>
     <button id="btn6">X</button>
     <div id="divs" ></div>
-    <!-- <script>
-        function today() {
-            console.log("lashuka")
-        }
-    </script> -->
-    <script src="weather.js" type="module"></script>
+    <script src="new.js"></script>
+    <!-- <script src="weather.js" type="module"></script> -->
 </body>
 </html>
