--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <button class="btn" onclick="ex1(event)" ></button>
     <button class="btn1" onclick="ex1(event)" ></button>
     <button class="btn2" onclick="ex1(event)"></button>  
-    <button id="btn3">X</button>
-    <button id="btn4">X</button>
-    <button id="btn5">X</button>
-    <button id="btn6">X</button>
+    <button class="btn3" onclick="ex2(event)"></button>
+    <button class="btn4" onclick="ex2(event)"></button>
+    <button class="btn5" onclick="ex2(event)"></button>
+    <button class="btn6" onclick="ex2(event)"></button>
     <div id="divs" ></div>
     <script src="new.js"></script>
-    <!-- <script src="weather.js" type="module"></script> -->
 </body>
 </html>
